# GDV

./: teil_5_michal.cpp  teil_5_michal_mit_anim.cpp
teil_5/: CMakeLists.txt  Wuerfel.cpp  Zylinder.cpp  Zylinder.h  main.cpp
